<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.4</version>
        <relativePath /> <!-- lookup parent from repository -->
    </parent>
    <groupId>com.stag</groupId>
    <artifactId>services</artifactId>
    <version>0.0.1</version>
    <packaging>pom</packaging>
    <name>services</name>
    <description>Aggregator for microservices</description>

    <properties>
        <!-- Spring -->
        <java.version>24</java.version>
        <spring-cloud.version>2025.0.0</spring-cloud.version>
        <springdoc.version>2.8.9</springdoc.version>
        <spring-grpc.version>0.9.0</spring-grpc.version>
        <oracle.jdbc.version>23.8.0.25.04</oracle.jdbc.version>

        <!-- gRPC -->
        <grpc.version>1.73.0</grpc.version>
        <protobuf-java.version>3.25.3</protobuf-java.version>
        <grpc-starter.version>3.1.0.RELEASE</grpc-starter.version>

        <!-- Tools -->
        <mapstruct.version>1.6.3</mapstruct.version>
        <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
        <openapi-generator.version>7.14.0</openapi-generator.version>
        <protobuf-maven-plugin.version>3.6.0</protobuf-maven-plugin.version>
    </properties>

    <modules>
        <module>config-server</module>
        <module>discovery-server</module>
        <module>api-gateway</module>
        <module>student-service</module>
        <module>subject-service</module>
        <module>codelist-service</module>
        <module>user-service</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <!-- Spring Cloud -->
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Spring gRPC -->
            <dependency>
                <groupId>net.devh</groupId>
                <artifactId>grpc-spring-boot-starter</artifactId>
                <version>${grpc-starter.version}</version>
            </dependency>

            <!-- OpenAPI -->
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${springdoc.version}</version>
            </dependency>

            <!-- Database -->
            <dependency>
                <groupId>com.oracle.database.jdbc</groupId>
                <artifactId>ojdbc11</artifactId>
                <version>${oracle.jdbc.version}</version>
            </dependency>
            <dependency>
                <groupId>com.oracle.database.nls</groupId>
                <artifactId>orai18n</artifactId>
                <version>${oracle.jdbc.version}</version>
            </dependency>

            <!-- Tools -->
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct</artifactId>
                <version>${mapstruct.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <!-- Spring Boot Plugin -->
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <configuration>
                        <excludes>
                            <exclude>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                            </exclude>
                        </excludes>
                        <layers>
                            <enabled>true</enabled>
                        </layers>
                        <image>
                            <builder>paketobuildpacks/builder-noble-java-tiny:0.0.47</builder>
                            <buildpacks>
                                <buildpack>paketobuildpacks/java:18.11.0</buildpack>
                                <buildpack>paketobuildpacks/health-checker:2.10.1</buildpack>
                            </buildpacks>
                            <env>
                                <BP_JVM_VERSION>${java.version}</BP_JVM_VERSION>
                                <BP_HEALTH_CHECKER_ENABLED>true</BP_HEALTH_CHECKER_ENABLED>
                                <BPL_JAVA_NMT_ENABLED>false</BPL_JAVA_NMT_ENABLED>
                                <JAVA_TOOL_OPTIONS>-Duser.timezone=Europe/Prague</JAVA_TOOL_OPTIONS>
                            </env>
                        </image>
                    </configuration>
                </plugin>

                <!-- Compiler Plugin -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.11.0</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.mapstruct</groupId>
                                <artifactId>mapstruct-processor</artifactId>
                                <version>${mapstruct.version}</version>
                            </path>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>${lombok.version}</version>
                            </path>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok-mapstruct-binding</artifactId>
                                <version>${lombok-mapstruct-binding.version}</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>

                <!-- OpenAPI Generator Plugin -->
                <plugin>
                    <groupId>org.openapitools</groupId>
                    <artifactId>openapi-generator-maven-plugin</artifactId>
                    <version>${openapi-generator.version}</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>generate</goal>
                            </goals>
                            <configuration>
                                <inputSpec>${project.basedir}/src/main/resources/static/openapi.yaml</inputSpec>
                                <generatorName>spring</generatorName>
                                <addCompileSourceRoot>true</addCompileSourceRoot>
                                <modelNameSuffix>DTO</modelNameSuffix>
                                <configOptions>
                                    <sourceFolder>src/gen/java</sourceFolder>
                                    <useSpringBoot3>true</useSpringBoot3>
                                    <interfaceOnly>true</interfaceOnly>
                                    <generateBuilders>true</generateBuilders>
                                    <openApiNullable>false</openApiNullable>
                                    <hideGenerationTimestamp>true</hideGenerationTimestamp>
                                </configOptions>
                                <typeMappings>
                                    <typeMapping>OffsetDateTime=java.time.LocalDateTime</typeMapping>
                                </typeMappings>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>

                <!-- gRPC Protobuf Plugin -->
                <plugin>
                    <groupId>io.github.ascopes</groupId>
                    <artifactId>protobuf-maven-plugin</artifactId>
                    <version>${protobuf-maven-plugin.version}</version>
                    <configuration>
                        <protocVersion>${protobuf-java.version}</protocVersion>
                        <sourceDirectories>
                            <sourceDirectory>${maven.multiModuleProjectDirectory}/proto</sourceDirectory>
                        </sourceDirectories>
                        <binaryMavenPlugins>
                            <binaryMavenPlugin>
                                <groupId>io.grpc</groupId>
                                <artifactId>protoc-gen-grpc-java</artifactId>
                                <version>${grpc.version}</version>
                                <options>@generated=omit</options>
                            </binaryMavenPlugin>
                        </binaryMavenPlugins>
                    </configuration>
                    <executions>
                        <execution>
                            <id>generate</id>
                            <goals>
                                <goal>generate</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>
